[Add]ルーティングの記述

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
+
   <body>
-    <%= yield %>
+    <header>
+      <h1>ようこそBookersへ!</h1>
+    </header>
+    
+    
+    <main>
+      <%= yield %>
+    </main>
+    
   </body>
 </html>
