--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,8 +8,18 @@
     </thead>
 </table>
 
+<% @books.each do |book| %>
+
+  <span>
+       <%= link_to book.title, book_path(book.id) %>
+  </span>
+  
+<% end %>
+
+
+
 <h2>New book</h2>
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book,url: '/books', method: :post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 	
