[Add]editページの作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,13 @@
-<p>Title:<%= @book.title %></p>
-
-
-
-<p>Body:<%= @book.body %></p>
-
-
-<a class="areaboder" href="/books">Edit</a>
-<a href="/books">Back</a>
+<body>
+  <p>
+    <strong>Title:</strong>
+    <%= @book.title %>
+  </p>
+  <p>
+    <strong>Body:</strong>
+    <%= @book.body %>
+  </p>
+  
+  <%= link_to 'Edit', edit_book_path(@book) %> |
+  <%= link_to 'Back', books_path %>
+</body>
