--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -2,3 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+    margin: 33px;
+    font-size: 13px;
+}
+
+.books {
+  display: flex;
+  flex-direction: column;
+}
+
+.books th {
+  text-align: center;
+}
+
+.books td {
+  vertical-align: top;
+}
