--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,21 +1,30 @@
-<h1>Books</h1>
-<table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Body</th>
-      </tr>
-    </thead>
-</table>
+<body>
+  <h1>Books</h1>
 
-<% @books.each do |book| %>
-
-  <span>
-       <%= link_to book.title, book_path(book.id) %>
-  </span>
-  
-<% end %>
-
+  <div class="books">
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+        </tr>
+      </thead>
+     <tbody>
+        <% @books.each do |book| %>
+          <tr>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+            <td>
+              <%= link_to 'Show', book_path(book) %>
+              <%= link_to 'Edit', edit_book_path(book) %>
+              <%= link_to 'Destroy', book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</body>
 
 
 <h2>New book</h2>
