--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,21 @@
 
 
 <h2>New book</h2>
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
 <%= form_with model: @book,url: '/books', method: :post do |f| %>
+
 
   <h4>Title</h4>
   <%= f.text_field :title %>
@@ -36,5 +50,6 @@
   <h4>Body</h4>
   <%= f.text_area :body %>
 	
+	<div class="create"></div>
   <%= f.submit 'Create Book' %>
 <% end %>
